--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "predeploy": "npm run build",
+ 
   "homepage": "https://dantsiopych.github.io/online-shop",
   "name": "shop-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gp-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
